syntax = "proto3";

package juno.file_service.bucket;

import "identifiers.proto";
import "file.proto";

service BucketDbService {
  rpc getBucket(GetBucketRequest) returns (Bucket);
  rpc createBucket(CreateBucketRequest) returns (Bucket);
  rpc deleteBucket(DeleteBucketRequest) returns (Bucket);
  rpc updateBucket(UpdateBucketRequest) returns (Bucket);
}

service BucketFileService {
  rpc registerBucket(RegisterBucketRequest) returns (Bucket);
  rpc removeBucket(RemoveBucketRequest) returns (Bucket);
}

message Bucket {
  string name = 1;
  int32 configId = 2;
  string configEnv = 5;
  string fileProviderName = 3;
  repeated identifiers.FileIdentifier FileServiceFile = 4;
}

message GetBucketRequest {
  string name = 1;
  int32 configId = 2;
  string configEnv = 3;
}

message CreateBucketRequest {
  string name = 1;
  int32 configId = 2;
  string configEnv = 5;
  string fileProviderName = 3;
  repeated identifiers.FileIdentifier FileServiceFile = 4;
}

message UpdateBucketRequest {
  string name = 1;
  int32 configId = 2;
  string configEnv = 4;
  string fileProviderName = 3;
}

message DeleteBucketRequest {
  string name = 1;
  int32 configId = 2;
  string configEnv = 3;
}

message RegisterBucketRequest {
  string name = 1;
  int32 configId = 2;
  string fileProviderName = 3;
  string configEnv = 5;
  repeated identifiers.FileIdentifier FileServiceFile = 4;
}

message RemoveBucketRequest {
  string name = 1;
  int32 configId = 2;
  string configEnv = 3;
}
